--- a/BPshop/templates/shop.html
+++ b/BPshop/templates/shop.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="row">
                 {% for product in pr %}
-                    {%if pr.available == TRUE %}
+                    {%if product.available %}
                     <div class="col-12 col-sm-6 col-md-12 col-xl-6">
                             <div class="single-product-wrapper">
                                 <!-- Product Image -->
@@ -76,7 +76,7 @@
                                     <div class="product-meta-data">
                                         <div class="line"></div>
                                         <p class="product-price">${{product.price}}</p>
-                                        <a href="product-details.html">
+                                        <a href="{% url 'productdetail' product.id %}">
                                             <h6>{{product.name}}</h6>
                                         </a>
                                     </div>
