--- a/BPshop/templates/navigation.html
+++ b/BPshop/templates/navigation.html
@@ -77,7 +77,7 @@
         </div>
         <!-- Cart Menu -->
         <div class="cart-fav-search mb-100">
-            <a href="cart.html" class="cart-nav"><img src="{% static 'img/core-img/cart.png' %}" alt=""> Корзина <span>(0)</span></a>
+            <a href="cart.html" class="cart-nav"><img src="{% static 'img/core-img/cart.png' %}" alt=""> Корзина <span>{%if cart%}({{ cart.cart_len }}){%else%}(0){%endif%}</span></a>
             <a href="#" class="fav-nav"><img src="{% static 'img/core-img/favorites.png' %}" alt=""> Избранное</a>
             <a href="#" class="search-nav"><img src="{% static 'img/core-img/search.png' %}" alt=""> Поиск</a>
         </div>
