--- a/BPshop/templates/product-details.html
+++ b/BPshop/templates/product-details.html
@@ -74,7 +74,7 @@
                             <form action="{% url 'cart:cart_add' product.id %}" method="post">
     {{ cart_product_form }}
     {% csrf_token %}
-    <input type="submit" value="Add to cart">
+    <input type="submit" class="btn btn-success" value="Add to cart">
 </form>
 
                         </div>
